[package]
name = "jrsdparsa"
version = "0.1.0"
authors = ["Nico Grunbaum <na-g@nostrum.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rsdparsa = { git = 'https://github.com/na-g/rsdparsa', branch = 'serde-ize', features = ['serialize'] }
wasm-bindgen = { git = 'https://github.com/alexcrichton/wasm-bindgen' }
serde_json = { version = '1.0.10' }
serde = { version = '1.0.27' }
