[package]
name = "webrtc-sdp-j"
version = "0.1.0"
authors = ["Nico Grunbaum <na-g@nostrum.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
webrtc-sdp = { git = 'https://github.com/mozilla/webrtc-sdp', features = ['serialize'] }
wasm-bindgen = { version = '0.2.79' }
serde_json = { version = '1.0.79' }
serde = { version = '1.0.136' }
